5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1793_1594.log
== TEST (2019-05-30 19:03:16) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
a=0
while(i=<size(a)):
	i=i+1
	s=s+(a[i])*i
	a=a+s
print(a)
	
-- ERROR:
File "XXXX", line 6
    while(i=<size(a)):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:26) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
a=0
while(i<size(a)):
	i=i+1
	s=s+(a[i])*i
	a=a+s
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:07) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
a=0
while(i<size(a)):
	i=i+1
	s=s+(a[i])
	s=s*i
	a=a+s
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:32) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
v=0
while(i<size(a)):
	i=i+1
	s=s+(a[i])
	s=s*i
	a=a+s
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:06:41) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
v=0
b=0
while(i<size(a)):
	b=b+1
	s=s+(a[i])
	s=s*b
	a=a+s
	i=i+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:24) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
v=0
b=0
while(i<size(a)):
	b=b+1
	s=s+(a[i])*b
	v=v+s
	i=i+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:09:24) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
v=0
b=0
while(i<size(a)):
	b=b+1
	s=s+(a[i])*b
	v=v+s
	i=i+1
v=v/size(a)
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:25) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
v=0
b=0
while(i<size(a)):
	b=b+1
	s=s+(a[i])*b
	i=i+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:44) 
-- CODE:
from numpy import*
a=array(eval(input("digite o vetor: ")))
i=0
s=0
v=0
b=0
while(i<size(a)):
	b=b+1
	s=s+(a[i])*b
	i=i+1
print(s)
	
-- EXECUTION TIME:
0.40055
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
